# screen-autocalib

./: .gitignore  README.md  app.py  app.spec  build.ps1  build.sh  calibration_data.py  data_acquisition.py  mathstuff.py  page1.py  page2.py  page3.py  page4.py  page5.py  page_1.py  page_2.py  pyproject.toml  requirements.txt  viz_screeninfo.py
ahrs-stubs/filters/: __init__.pyi  angular.pyi  aqua.pyi  complementary.pyi  davenport.pyi  ekf.pyi  famc.pyi  flae.pyi  fourati.pyi  fqa.pyi  madgwick.pyi  mahony.pyi  oleq.pyi  quest.pyi  roleq.pyi  saam.pyi  tilt.pyi  triad.pyi
depth_sensor/interface/: frame.py  frames.py  pipeline.py  stream_profile.py
depth_sensor/orbbec/: frame.py  frames.py  pipeline.py  stream_profile.py  utils.py
depth_sensor/realsense/: frame.py  frames.py  pipeline.py  stream_profile.py
pyrealsense2-stubs/: __init__.pyi  pyrealsense2.pyi
