[project]
name = "screen-autocalib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ahrs>=0.3.1",
    "matplotlib==3.9",
    "numpy<2",
    "numpy-quaternion>=2024.0.3",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "platformdirs>=4.3.6",
    "pybind11-stubgen>=2.5.3",
    "pyinstaller==6.11",
    "pyorbbecsdk",
    "pyrealsense2>=2.55.1.6486",
    "pyside6>=6.8.1.1",
    "returns>=0.24.0",
]

[dependency-groups]
dev = []

[tool.uv.sources]
pyorbbecsdk = { git = "https://github.com/Abrahamh08/pyorbbecsdk", branch = "trunk-v2-main" }
